inititial bitbalance.api
